# spiritvale-overlay

./: CONTEXT.md  LICENSE  README.md  SpiritVale-Overlay-HANDOFF.md  index.html  package-lock.json  package.json
release/: SHA256SUMS-v1.0.0.txt  SHA256SUMS-v1.1.0.txt
src/: bootstrap.tsx  catalog.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
