[package]
name="spiritvale-overlay"
version="0.1.1"
description="A read-only SpiritVale game-reference overlay"
authors= ["SpiritVale"]
edition="2021"
[build-dependencies]
tauri-build= {version="2",features= [] }
[dependencies]
tauri= {version="2",features= [] }
tauri-plugin-global-shortcut="2"
tauri-plugin-opener="2"
[features]
custom-protocol= ["tauri/custom-protocol"]
