[package]
name="spiritvale-overlay"
version="1.1.2"
description="A read-only SpiritVale game-reference overlay"
authors= ["SpiritVale"]
edition="2021"
[build-dependencies]
tauri-build= {version="2",features= [] }
[dependencies]
tauri= {version="2",features= [] }
tauri-plugin-global-shortcut="2"
tauri-plugin-opener="2"
regex="1"
reqwest= {version="0.13",default-features=false,features= ["rustls"] }
serde= {version="1",features= ["derive"] }
serde_json="1"
[features]
custom-protocol= ["tauri/custom-protocol"]
